k8s/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP # 내부 통신용 (인그레스가 외부를 담당하므로)
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
